[gd_scene load_steps=26 format=3 uid="uid://d4dgkl8mvckkk"]

[ext_resource type="Theme" uid="uid://bkavqyofikvxb" path="res://misc/theme.tres" id="1_gl1a3"]
[ext_resource type="Texture2D" uid="uid://dcqxm244lb5ty" path="res://car/bodies/graphics/wing_car.png" id="2_4gtuu"]
[ext_resource type="Script" uid="uid://bbmxpa3elcsea" path="res://menu/ending/ending.gd" id="2_pwls7"]
[ext_resource type="Shader" uid="uid://diys0gfffqoqj" path="res://misc/shaders/bevel2.gdshader" id="2_snfes"]
[ext_resource type="PackedScene" uid="uid://mpu4no1rdq2a" path="res://menu/ending/ending_button.tscn" id="3_odihs"]
[ext_resource type="Texture2D" uid="uid://d2qhgup7qrm2r" path="res://car/wheels/graphics/rubber.png" id="3_snfes"]
[ext_resource type="Script" uid="uid://bnfdwklkyrfmi" path="res://menu/ending/stat_display.gd" id="4_pwls7"]
[ext_resource type="Script" uid="uid://cchclodj2gyo8" path="res://menu/ending/car_display.gd" id="6_klxgc"]

[sub_resource type="Gradient" id="Gradient_pwls7"]
offsets = PackedFloat32Array(0, 0.54210526, 1)
colors = PackedColorArray(0.0837, 0.148905, 0.27, 1, 0.19628993, 0.05940001, 0.27, 1, 0.2196, 0.36, 0.35298002, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cq60w"]
gradient = SubResource("Gradient_pwls7")
fill = 1
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 1)
metadata/_snap_enabled = true

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gl1a3"]
blend_mode = 1

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fxyxx"]
gradient = SubResource("Gradient_pwls7")
fill = 2
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 1)
metadata/_snap_enabled = true

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4gtuu"]
blend_mode = 3

[sub_resource type="Gradient" id="Gradient_2sjlo"]
offsets = PackedFloat32Array(0.75, 0.8)
colors = PackedColorArray(1, 1, 1, 1, 0.78075, 0.765, 0.9, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_snfes"]
gradient = SubResource("Gradient_2sjlo")
width = 256
height = 128
fill = 1
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5s5oy"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_p7dre"]
offsets = PackedFloat32Array(0.30927834, 0.8)
colors = PackedColorArray(0.0686, 0.10668, 0.14, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y7s1s"]
gradient = SubResource("Gradient_p7dre")
width = 256
height = 128
fill = 1
fill_from = Vector2(0.7, 0.6)
fill_to = Vector2(0.8, 0.4)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gl1a3"]
gradient = SubResource("Gradient_p7dre")
width = 256
height = 128
fill = 1
fill_from = Vector2(0.7, 0.6)
fill_to = Vector2(0.7, 0.5)
metadata/_snap_enabled = true

[sub_resource type="SystemFont" id="SystemFont_odihs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5s5oy"]
shader = ExtResource("2_snfes")
shader_parameter/highlight_color = Color(1, 0, 0, 1)
shader_parameter/shadow_color = Color(0.029999971, 0.046166837, 1, 1)
shader_parameter/strength = 0.5
shader_parameter/bevel_type = 0
shader_parameter/bevel_offset = 3.0
shader_parameter/knockout = false
shader_parameter/pixel_detail = 4.0
shader_parameter/blur_strength = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5wneq"]
atlas = ExtResource("3_snfes")
region = Rect2(0, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_usn52"]
atlas = ExtResource("3_snfes")
region = Rect2(10, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxubf"]
atlas = ExtResource("3_snfes")
region = Rect2(20, 0, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_5s5oy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wneq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usn52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxubf")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[node name="Ending" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gl1a3")
script = ExtResource("2_pwls7")
intermission_path = "res://menu/intermission.tscn"
title_path = "res://menu/title/title.tscn"

[node name="Wallpaper" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_cq60w")
flip_h = true

[node name="Wallpaper2" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.65882355)
material = SubResource("CanvasItemMaterial_gl1a3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_fxyxx")
flip_v = true

[node name="Wallpaper3" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.65882355)
material = SubResource("CanvasItemMaterial_4gtuu")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_snfes")

[node name="Wallpaper4" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.65882355)
material = SubResource("CanvasItemMaterial_5s5oy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_y7s1s")

[node name="Wallpaper5" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.65882355)
material = SubResource("CanvasItemMaterial_5s5oy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_gl1a3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2509804)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 14
text = "And so, your vehicle manages to reach the end,
and turn off the generator powering the ancient city.

Now that the security robots are deactivated, you can
commence your \"research\" and gain considerable riches! :D

See you next time!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Padding2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_odihs")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Button" index="2"]
theme_override_fonts/font = SubResource("SystemFont_odihs")

[node name="Button2" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_odihs")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Button2" index="2"]
theme_override_fonts/font = SubResource("SystemFont_odihs")
text = "Restart"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="Padding" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2509804)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 14
text = "%s days - %s - %s"
vertical_alignment = 2
autowrap_mode = 3
script = ExtResource("4_pwls7")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="CenterContainer"]
layout_mode = 2

[node name="CarBody" type="Sprite2D" parent="CenterContainer/Control"]
texture_filter = 1
material = SubResource("ShaderMaterial_5s5oy")
position = Vector2(0, -14)
rotation = -0.2617994
scale = Vector2(3, 3)
texture = ExtResource("2_4gtuu")
script = ExtResource("6_klxgc")

[node name="Wheel1" type="AnimatedSprite2D" parent="CenterContainer/Control/CarBody"]
use_parent_material = true
position = Vector2(12, -4)
sprite_frames = SubResource("SpriteFrames_5s5oy")
offset = Vector2(0, 14)

[node name="Wheel2" type="AnimatedSprite2D" parent="CenterContainer/Control/CarBody"]
use_parent_material = true
position = Vector2(-12, -4)
sprite_frames = SubResource("SpriteFrames_5s5oy")
offset = Vector2(0, 14)

[node name="MouseBlocker" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="to_intermission"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="to_title"]

[editable path="MarginContainer/VBoxContainer/HBoxContainer/Button"]
[editable path="MarginContainer/VBoxContainer/HBoxContainer/Button2"]
